# ai-anomaly-detection-skab

./: .gitignore  README.md  pyproject.toml
configs/: dataset.yaml
src/anomaly_detection/data/: acquire.py  download.py  load.py  prepare.py  resolve.py  schema.py
src/anomaly_detection/utils/: paths.py
tests/: test_download_requires_git.py  test_paths.py  test_resolve.py  test_schema.py
