[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-anomaly-detection-skab"
version = "0.1.0"
description = "End-to-end ML lifecycle for sensor anomaly detection using the SKAB dataset"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
"numpy",
"pandas",
"scikit-learn",
"pyyaml",
"python-dotenv",
]

[project.optional-dependencies]
dev = [
"pytest",
"ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks/*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]